@@ -5,6 +5,9 @@
  * lib/Mail/DKIM/PrivateKey.pm: die if unable to open private key file
  * lib/Mail/DKIM/Signer.pm: no more need for a separate existance check
    on the private key filename
+ * lib/Mail/DKIM/Signature.pm: allow Identity to be specified in new()
+ * lib/Mail/DKIM/Signer.pm: allow Identity to be specified in new()
+ * t/signer.t: test that specifying Identity works
 
 2007-10-02: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Canonicalization/DkCommon.pm: there are some varying
